--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,5 +27,7 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
 
 copyright: Copyright &copy; 2024 DECODE DATA LTD (15503524), UK
