--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,7 @@ nav:
   - Google Anaytics 4:
     - Overview: ga4/index.md
     - Events: ga4/events.md
-
+    - Sessions: ga4/sessions.md
 
 
 copyright: Copyright &copy; 2024 DECODE DATA LTD (15503524), UK
