--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,4 +57,7 @@ nav:
   - BigQuery Reference:
     - Functions: bigquery/functions.md
 
-copyright: Copyright &copy; 2024 DECODE DATA LTD (15503524), UK
+copyright: >
+  Copyright &copy; 2024 DECODE DATA LTD (15503524), UK
+  <a href="#__consent">Change cookie settings</a>
+  
