--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ nav:
   - BigQuery Reference:
     - Functions: bigquery/functions.md
 
-copyright: >
+copyright: >-
   Copyright &copy; 2024 DECODE DATA LTD (15503524), UK
-  <a href="#__consent">Change cookie settings</a>
+  <br><a href="#__consent">Change cookie settings</a>
   
