--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ extra:
 nav:
   - Overview: index.md
   - Decoders:
-    - Google Anaytics 4:
+    - Google Analytics 4:
       - Overview: ga4/index.md
       - Events: ga4/events.md
       - Sessions: ga4/sessions.md
