--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,10 @@ nav:
   - Decoders:
     - Google Analytics 4:
       - GA4 Overview: ga4/index.md
-      - Events: ga4/events.md
+      - Events: 
+        - Events Overview: ga4/events/index.md
+        - Names: ga4/events/event_names.md
+        - Parameters: ga4/events/event_parameters.md
       - Sessions: ga4/sessions.md
   - BigQuery Reference:
     - Functions: bigquery/functions.md
